# TDD

./: .gitignore  functional_tests.py  pyproject.toml  requirements.txt
functional_tests/: tests.py
lists/: models.py  tests.py  views.py
lists/templates/: home.html  list.html
superlists/: settings.py  urls.py
