[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "asgiref=3.8.1",
    "attrs==25.1.0",
    "black==25.1.0",
    "certifi==2025.1.31",
    "distlib==0.3.9",
    "Django==5.1.7",
    "django-rich==1.14.0",
    "filelock==3.18.0",
    "geckodriver==0.0.1",
    "h11==0.14.0",
    "idna==3.10",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "outcome==1.3.0.post0",
    "pbr==6.1.1",
    "platformdirs==4.3.7",
    "Pygments==2.19.1",
    "PySocks==1.7.1",
    "pytz==2025.1",
    "rich==14.0.0",
    "selenium==4.29.0",
    "setuptools==77.0.3",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "sqlparse==0.5.3",
    "stevedore==5.4.1",
    "trio==0.29.0",
    "trio-websocket==0.12.2",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
    "virtualenv==20.29.3",
    "virtualenv-clone==0.5.7",
    "virtualenvwrapper==6.1.1",
    "websocket-client==1.8.0",
    "wsproto==1.2.0",
]

